eodhp-web-presence-helm/templates/eodhp_web_presence/website-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eodhp-website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eodhp-website
  template:
    metadata:
      labels:
        app: eodhp-website
    spec:
      containers:
        - name: eodhp-website
          image: hcollingwoodtpz/eodhp_website:0.1.3
          ports:
            - containerPort: 8000
