eodhp-web-presence-helm/templates/eodhp_web_presence/website-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eodhp-website-service
spec:
  type: ClusterIP
  selector:
    app: eodhp-website
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
